# agent-interception

./: .gitignore  README.md  pyproject.toml
scripts/: _common.py  code_review.py  design_discussion.py  generate_report.py  multi_turn_refactor.py  parallel_analysis.py  verify_logs.py
src/agent_interception/: __init__.py  __main__.py  cli.py  config.py  models.py
src/agent_interception/display/: charts.py  terminal.py
src/agent_interception/providers/: anthropic.py  base.py  ollama.py  openai.py  registry.py
src/agent_interception/proxy/: context.py  handler.py  server.py  streaming.py
src/agent_interception/storage/: migrations.py  store.py
tests/: conftest.py
tests/test_display/: test_charts.py
tests/test_integration/: test_end_to_end.py
tests/test_providers/: test_anthropic.py  test_ollama.py  test_openai.py  test_registry.py
tests/test_proxy/: test_handler.py  test_streaming.py
tests/test_storage/: test_store.py
